--- a/chart/templates/pvc.yaml
+++ b/chart/templates/pvc.yaml
@@ -1,5 +1,5 @@
 ---
-{{- if .Values.persistenence.enabled }}
+{{- if .Values.persistence.enabled }}
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
