--- a/chart/templates/rethinkdb/pvc.yaml
+++ b/chart/templates/rethinkdb/pvc.yaml
@@ -1,5 +1,5 @@
 ---
-{{- if and .Values.persistenence.enabled (not .Values.persistence.existingClaim) }}
+{{- if .Values.persistence.enabled }}
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
