--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -49,7 +49,7 @@ spec:
       volumes:
         - name: parabol-persistent-storage
           persistentVolumeClaim:
-            claimName: {{ include "parabol.parabol-storage" }}
+            claimName: {{ include "parabol.parabol-storage" . | nindent 16 }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
