--- a/chart/templates/rethinkdb/pvc.yaml
+++ b/chart/templates/rethinkdb/pvc.yaml
@@ -3,7 +3,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{ include "parabol.fullname" . }}-rethinkdb-pvc
+  name: {{ include "parabol.rethinkdb-storage" . }}
   namespace: {{ .Release.Namespace }}
 spec:
   accessModes:
