--- a/chart/templates/redis/service.yaml
+++ b/chart/templates/redis/service.yaml
@@ -2,11 +2,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "parabol.fullname" . }}
+  name: {{ include "parabol.fullname" . }}-redis
   namespace: {{ .Release.Namespace }}
   labels:
+    app: redis
     {{- include "parabol.labels" . | nindent 4 }}
-    app: parabol
   annotations:
     prometheus.io/scrape: "true"
     prometheus.io/port: "8000"
@@ -15,9 +15,8 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-    - name: parabol
-      port: 3000
-      protocol: TCP
+    - name: cluser
+      port: 6379
   selector:
     {{- include "parabol.selectorLabels" . | nindent 4 }}
-    app: parabol
+    app: redis
