--- a/chart/templates/rethinkdb/pvc.yaml
+++ b/chart/templates/rethinkdb/pvc.yaml
@@ -3,7 +3,8 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{ include "parabol.rethinkdb-storage" . }}
+  #name: {{ include "parabol.rethinkdb-storage" . }}
+  name: parabol-rethinkdb-data
   namespace: {{ .Release.Namespace }}
 spec:
   accessModes:
