--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -37,8 +37,8 @@ spec:
         securityContext:
           {{- toYaml .Values.securityContext | nindent 12 }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-        command: ["/bin/sh"]
-        args: ["-c", "yarn && yarn build && yarn db:migrate && yarn pg:migrate up && yarn postdeploy && yarn start"]
+        #command: ["/bin/sh"]
+        #args: ["-c", "yarn db:migrate && yarn pg:migrate up && yarn postdeploy && yarn start"]
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         ports:
         - name: parabol
